# website

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  compile-frontend.sh  config.ini  docker-compose.yml  manage.py  nginx.default  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
apps/api/: admin.py  models.py  urls.py
apps/api/endpoints/gphotos/: gphotos_api.py  urls.py  views.py
apps/api/endpoints/spotify/: models.py  spotify_api.py  urls.py  views.py
apps/api/migrations/: 0001_initial.py  0002_alter_oauthtoken_access_token_and_more.py  0003_tempstatecode_delete_spotifystatecode_and_more.py
apps/api/util/: oauth2.py
apps/home/: urls.py  views.py
apps/home/jinja2/home/: _templates.html  base.html  index.html
apps/home/static/home/css/: home.css
apps/home/static/home/js/: tiles.js
apps/home/static/home/scss/: _colors.scss  _darkmode.scss  _tiles.scss  home.scss
apps/home/static/home/scss/bulma/: README.md
apps/home/static/home/scss/bulma/css/: bulma-rtl.css
apps/home/static/home/scss/bulma/sass/elements/: button.sass  table.sass
apps/home/static/home/scss/bulma/sass/form/: select.sass
apps/home/static/home/scss/bulma/sass/utilities/: initial-variables.sass  mixins.sass
apps/home/templates/home/: _templates.html  index.html
apps/home/templatetags/: utils.py
apps/wellknown/: urls.py  views.py
main/: views.py
main/templates/: index.html
static/: webfonts
website/: config.py  jinja2.py  purgecss.py  settings.py  urls.py
