[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Mike A. <32306794+DismissedGuy@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.6"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
